--- a/css/style360.css
+++ b/css/style360.css
@@ -1,7 +1,17 @@
 @media (max-width: 360px) {
   .header {
-      width: 360px;
-      height: 600px;
-      background-color: aqua;
+    width: 100%;
+    height: 20px;
+    background-color: aqua;
+  }
+  .main {
+    width: 100%;
+    height: 400px;
+    background: url("../img/m.jpg") center/cover no-repeat;
+  }
+  .sub-main-img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
