--- a/css/style360.css
+++ b/css/style360.css
@@ -10,6 +10,9 @@
     background: url("../img/m.jpg") center/cover no-repeat;
   }
   .sub-main-img {
+      width: 100%;
+      height: 100px;
+      background-color: red;
     display: flex;
     align-items: center;
     justify-content: center;
