--- a/css/style360.css
+++ b/css/style360.css
@@ -1,18 +1,34 @@
 @media (max-width: 360px) {
   .header {
     width: 100%;
-    height: 20px;
-    background-color: aqua;
+    height: 64px;
+    /* background-color: aqua; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .header-nav {
+    width: 33px;
+    height: 33px;
+  }
+  .header-nav-centre .header-nav {
+    width: 40px;
+    height: 40px;
+  }
+  .header-nav img {
+    width: 100%;
   }
   .main {
     width: 100%;
-    height: 400px;
+    height: 350px;
     background: url("../img/m.jpg") center/cover no-repeat;
   }
   .sub-main-img {
-      width: 100%;
-      height: 100px;
-      background-color: red;
+    width: 100%;
+    height: 70px;
+
     display: flex;
     align-items: center;
     justify-content: center;
