--- a/css/style.css
+++ b/css/style.css
@@ -3,28 +3,42 @@
   margin: 0 auto;
 }
 .header {
+  width: 100%;
+  height: 100px;
+  /* background-color: aqua; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .container {
 }
 .main {
 }
+.tarify {
+  margin: 5px 10px 0px 10px;
+}
 .footer {
 }
-.header {
-  width: 100%;
-  height: 20px;
-  /* background-color: aqua; */
-}
+
 .main {
   width: 100%;
   height: 400px;
   background: url("../img/open2.jpg") center/cover no-repeat;
+  margin-bottom: 10px;
 }
-.sub-main-img {
+/* .sub-main-img {
   width: 100%;
   height: 70px;
 
   display: flex;
   align-items: center;
   justify-content: center;
+} */
+h1 {
+  text-align: center;
+  font-size: 35px;
+  color: red;
+  margin-bottom: 16px;
 }
