--- a/css/style.css
+++ b/css/style.css
@@ -45,5 +45,25 @@ h1 {
   border-radius: 40px;
   padding: 10px 10px 10px 10px;
 }
+hr {
+  size: 5px;
+  width: 50px;
+  color: #710cdf;
+}
+.info-block {
+  margin-top: 30px;
+}
+.block {
+  width: 80%;
+  height: 50px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  border: 1px solid black;
+  margin-bottom: 15px;
+  font-size: 23px;
+}
 .footer {
 }
