--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 h1 {
   text-align: center;
   font-size: 35px;
+  font-weight: bold;
   color: red;
   margin-bottom: 16px;
 }
@@ -54,7 +55,7 @@ hr {
   margin-top: 30px;
 }
 .block {
-  width: 80%;
+  width: 85%;
   height: 50px;
   margin: 0 auto;
   display: flex;
@@ -64,6 +65,12 @@ hr {
   border: 1px solid black;
   margin-bottom: 15px;
   font-size: 23px;
+  font-weight: bold;
+  padding: 5px;
+  color: #710cdf;
 }
 .footer {
+    width: 100%;
+    height: 60px;
+    background-color: #9f9f9f;
 }
