--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ h1 {
   border: 1px solid red;
   border-radius: 40px;
   padding: 10px 10px 10px 10px;
+  overflow: hidden;
 }
 hr {
   size: 5px;
@@ -70,7 +71,12 @@ hr {
   color: #710cdf;
 }
 .footer {
-    width: 100%;
-    height: 60px;
-    background-color: #9b9b9b;
+  width: 100%;
+  height: 60px;
+  background-color: #9b9b9b;
+}
+.container {
+  max-width: 80%;
+  display: flex;
+  align-items: center;
 }
