--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,7 @@ h1 {
   padding: 10px 10px 10px 10px;
   overflow: hidden;
 }
-hr {
-  size: 5px;
-  width: 50px;
-  color: #710cdf;
-}
+
 .info-block {
   margin-top: 30px;
 }
@@ -81,4 +77,30 @@ hr {
   max-width: 80%;
   display: flex;
   align-items: center;
+}
+
+/* user - HTML */
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 50px auto;
+}
+.user-info {
+  margin: 10px 20px 10px 20px;
+  font-size: 23px;
+  color: #710cdf;
+  line-height: 1.5;
+}
+.user-sale {
+  display: block;
+  border: 2px solid red;
+  margin: 10px 30px 0px 30px;
+  font-size: 20px;
+  padding: 20px;
+}
+.user-sale input {
+  border: 2px solid rgb(55, 0, 255);
+  margin-bottom: 10px;
 }
