--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,14 @@ h1 {
 .use__5 {
   display: none;
 }
+
+.luxe__2 {
+  display: none;
+}
+.luxe__3 {
+  display: none;
+}
+
 .block {
   display: block;
   margin-top: 20px;
